# flask_test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  Dockerfile  Pipfile  README  README.md  config.py  docker-compose-dev.yml  docker-compose.yml  fabfile.py  pyproject.toml  requirements.txt  tests_.py
Containerfiles/app/: Containerfile
app/: __init__.py  models.py
app/admin/: forms.py  views.py
app/auth/: forms.py  views.py
app/static/css/: style.css
app/templates/admin/: register.html
app/templates/auth/: login.html
conf/nginx/: flask_test.conf
src/: config.py  run.py  test_app.py
src/app/: __init__.py  models.py
src/app/admin/: forms.py  views.py
src/app/auth/: forms.py  views.py
src/app/home/: views.py
src/app/static/css/: bootstrap.min.css  style.css
src/app/templates/: base.html
src/app/templates/admin/: register.html
src/app/templates/auth/: login.html
src/app/templates/errors/: 403.html  404.html  500.html
src/app/templates/home/: admin_dashboard.html  dashboard.html  index.html
src/instance/: config.py
src/migrations/versions/: 4bdd8d115d3d_.py  64bbcc41ed12_.py  718072e01290_.py
