[project]
name = "flask-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Martins Golvers", email = "martins.golvers@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-bootstrap>=3.3.7.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "wtforms>=3.2.1",
    "wtforms-sqlalchemy>=0.4.2",
]

[dependency-groups]
dev = [
    "bandit>=1.8.2",
    "black>=25.1.0",
    "flake8>=7.1.1",
    "flask-testing>=0.8.1",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pip-audit>=2.7.3",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.0.0",
    "pytest-icdiff>=0.9",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.4",
    "types-flask-migrate>=4.1.0.20250112",
    "types-flask-sqlalchemy>=2.5.9.4",
    "types-redis>=4.6.0.20241004",
]

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.tox
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true

[tool.autopep8]
max_line_length = 100

[tool.pylint]
max-line-length = 100

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.flake8]
max_line_length = 100

[tool.pyright]

[tool.pydocstyle]

[tool.ruff]
line-length = 100
target-version = "py312"
ignore-init-module-imports = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "-vv -x -s --cov=app --cov-report term-missing"
asyncio_mode = "auto"

[tool.git-cliff.changelog]
header = "All notable changes to this project will be documented in this file."
body = "..."
footer = "<!-- generated by git-cliff -->"
# see [changelog] section for more keys

[tool.git-cliff.git]
conventional_commits = true
commit_parsers = []
filter_commits = false
